# Graphics

./: .gitignore  CMakeLists.txt  README.md
include/: Document.h  main_window.h  types.h
include/file_actions/: file_manager.h
include/shapes/: shape.h
include/shapes/individual_shape/: circle.h  freehand.h  hexagon.h  line.h  rectangle.h  rounded_rectangle.h  text.h
include/tools/: drawing_tool.h  manipulation_tool.h  tool.h  tool_manager.h
include/tools/individual_tools/: circle_tool.h  eraser_tool.h  freehand_tool.h  hexagon_tool.h  line_tool.h  move_tool.h  rectangle_tool.h  resize_tool.h  rounded_rectangle_tool.h  text_tool.h
include/utils/: utils.h
src/: Document.cpp  event.cpp  horizontal_toolbar.cpp  main.cpp  main_window.cpp  menubar.cpp  paint.cpp  vertical_toolbar.cpp
src/file_actions/: file_manager.cpp  parser.cpp
src/shapes/: circle.cpp  freehand.cpp  hexagon.cpp  line.cpp  rectangle.cpp  rounded_rectangle.cpp  text.cpp
src/tools/: drawing_tool.cpp  manipulation_tool.cpp  tool_manager.cpp
src/tools/individual_tools/: circle_tool.cpp  eraser_tool.cpp  freehand_tool.cpp  hexagon_tool.cpp  line_tool.cpp  move_tool.cpp  rectangle_tool.cpp  resize_tool.cpp  rounded_rectangle_tool.cpp  text_tool.cpp
src/utils/: utils.cpp
